# ai-video-generation-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: create_product_video.py
src/assembly/: video_assembler.py
src/audio/: voice_synthesizer.py
src/character/: consistency_engine.py
src/models/: pipeline_models.py
src/pipeline/: orchestrator.py
src/script/: script_generator.py
src/storyboard/: storyboard_engine.py
src/video/: kling_client.py  runway_client.py
tests/: test_consistency_engine.py
