[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-generation-pipeline"
version = "0.1.0"
description = "End-to-end AI video generation with character consistency"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sainath Pattipati", email = "sainath@example.com"}
]
keywords = ["video", "ai", "generative", "production"]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/SainathPattipati/ai-video-generation-pipeline"
Repository = "https://github.com/SainathPattipati/ai-video-generation-pipeline"
